fix style glitches on ios

--- a/components/Terminal/index.module.css
+++ b/components/Terminal/index.module.css
@@ -13,7 +13,8 @@
 .terminal {
   height: 100vh;
   text-shadow: 0 0.2rem 1rem #1d4ed8;
-  padding-bottom: 36px;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 .monitor.error > .terminal {
   text-shadow: 0 0.2rem 1rem #be123c;
@@ -31,6 +32,7 @@
   right: 0;
   background: rgba(18, 16, 16, 0.2);
   opacity: 0;
+  will-change: opacity;
   z-index: 1000;
   pointer-events: none;
   animation: flicker 0.12s infinite;
@@ -163,7 +165,8 @@
 .monitor {
   height: 100vh;
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
+  will-change: opacity, transform;
 }
 .monitor.collapse {
   animation: size 2s ease-out;
@@ -215,17 +218,29 @@
   z-index: 2000;
   opacity: 0.1;
   pointer-events: none;
-  background: repeating-radial-gradient(#000 0 0.0001%, #fff 0 0.0002%) 50% 0/2500px
-      2500px,
-    repeating-conic-gradient(#000 0 0.0001%, #fff 0 0.0002%) 50% 50%/2500px
-      2500px;
-  background-blend-mode: difference;
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)),
+    url("./assets/noise.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  filter: contrast(170%) brightness(200%);
+  will-change: transform;
   animation: shift 0.2s infinite alternate;
+  transform: translate(0%, 0%) scale(1.1);
 }
 
 @keyframes shift {
-  100% {
-    background-position: 50% 0, 50% 60%;
+  20% {
+    transform: translate(5%, 0%) scale(1.1);
+  }
+  40% {
+    transform: translate(0%, -5%) scale(1.1);
+  }
+  60% {
+    transform: translate(-5%, 5%) scale(1.1);
+  }
+  80% {
+    transform: translate(5%, -5%) scale(1.1);
   }
 }
 
